nebl-1.0.15-alpha-neoforge+1.21.1+21.1.21: Merge into the NEBreload repository, with the mod ID unified as nebl; potential replay compatibility problem.